--- a/src/demo.html
+++ b/src/demo.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-	<title>inputEmoji demo page</title>
+	<title>mapzoom demo page</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<script src='mapzoom.js'></script>
 	<script>
 		$(function () {
-			$('.map').mapzoom({fixSize: true, debug: true, maxZoom: 400});
+			$('.map').mapzoom({maxZoom: 400});
 			$(".zoomin").on("click", function(){
 				$('.map').mapzoom("zoomin");
 			});
@@ -19,7 +19,7 @@
 	<style>
 		.map {
 			width: 80%;
-			height: 612px;
+			height: 756px;
 		}
 	</style>
 	
@@ -28,7 +28,7 @@
 		<button class="btn zoomin">+</button>
 		<button class="btn zoomout">-</button><br>
 		<div class="map">
-			<img src="http://parking.dvlg.ru/svg/level1.svg"/>
+			<img src="world.svg" style="width: 100%"/>
 		</div>
 </body>
 </html>
